test-cases/valid/reject/bad_assignment_type.ul
void main() {
    boolean b;
    int i;
    i = 0;
    b = i; // Can't assign int to boolean
}
